--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <section>
   <div>
     <h1>Welcome</h1>
-    <app-mw-media-item></app-mw-media-item>
+    <app-mw-media-item
+      (delete)="onMediaItemDelete($event)"
+      [mediaItem]="firstMediaItem"
+    ></app-mw-media-item>
   </div>
 </section>
