--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,9 @@
       (delete)="onMediaItemDelete($event)"
       [mediaItem]="firstMediaItem"
     ></app-mw-media-item>
+
+    <app-ng-for-data [storeItem]="storeItemArray"></app-ng-for-data>
+
+    <app-form-component></app-form-component>
   </div>
 </section>
